@@ -3,7 +3,7 @@ use warnings;
 
 use File::Object;
 use SGML::PYX;
-use Test::More 'tests' => 21;
+use Test::More 'tests' => 22;
 use Test::NoWarnings;
 use Test::Output;
 
@@ -309,4 +309,20 @@ stdout_is(
 	},
 	$right_ret,
 	'Test start of element with blank attribute without quotes #3.',
+);
+
+# Test.
+$obj = SGML::PYX->new;
+$right_ret = <<'END';
+(svg
+Axmlns http://www.w3.org/2000/svg
+Axmlns:odm http://product.corel.com/CGS/11/cddns/
+END
+stdout_is(
+	sub {
+		$obj->parsefile($data_dir->file('start_element21.sgml')->s);
+		return;
+	},
+	$right_ret,
+	'Test start of element with multiline attributes.',
 );
