@@ -1,0 +1,3 @@
+<svg
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:odm="http://product.corel.com/CGS/11/cddns/">
