@@ -1,4 +1,5 @@
 0.06
+ - Fix bug in parsing of multiline attributes.
 
 0.05 2020-05-21T00:39:14+02:00
  - Add test for bad attribute parsing.
